--- a/common_services/reporting/pom.xml
+++ b/common_services/reporting/pom.xml
@@ -71,6 +71,16 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+			<resource>
+				<directory>src/main/resources/fonts</directory>
+				<filtering>false</filtering>
+			</resource>
+		</resources>		
 	</build>
 	
 	<dependencies>
