--- a/common_services/reporting/src/main/resources/reporting.properties
+++ b/common_services/reporting/src/main/resources/reporting.properties
@@ -19,9 +19,10 @@ FHI.query=(\
 "/md-records/md-record/publication/dateAccepted"<>""\
 %20or%20"/md-records/md-record/publication/dateSubmitted"<>""\
 )
+FHI.sort.by=%20sortby%20"/properties/created-by/id" 
 FHI.report.formats=pdf,rtf
 FHI.sender.address=pubman@mpdl.mpg.de
-FHI.recipients.addresses=makarenko@mpdl.mpg.de,makarenko@mpdl.mpg.de
+FHI.recipients.addresses=makarenko@mpdl.mpg.de,boosen@mpdl.mpg.de
 FHI.recipients.cc.addresses=makarenko@mpdl.mpg.de,makarenko@mpdl.mpg.de
 FHI.recipients.bcc.addresses=makarenko@mpdl.mpg.de,makarenko@mpdl.mpg.de
 FHI.reply.to.addresses=makarenko@mpdl.mpg.de,makarenko@mpdl.mpg.de
