--- a/common_services/batchprocessmanager/src/main/resources/bpm.properties
+++ b/common_services/batchprocessmanager/src/main/resources/bpm.properties
@@ -78,7 +78,7 @@ escidoc.pubman.cookie.version=${escidoc.pubman.cookie.version}
 
 
 # URL of the FIZ framework instance
-escidoc.framework_access.framework.url=${escidoc.common.framework.url}
+escidoc.framework_access.framework.url=${escidoc.framework_access.framework.url}
 # URL of the escidoc-core instance you like to logon to
 escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
 
@@ -105,8 +105,8 @@ escidoc.validation.source.classname=${escidoc.validation.source.classname}
 escidoc.validation.refresh.interval=${escidoc.validation.refresh.interval}
 
 # Used for validation initialization
-framework.admin.username=${framework.admin.username}
-framework.admin.password=${framework.admin.password}
+framework.admin.username=roland
+framework.admin.password=Htpw55
 
 # eSciDoc-ObjId of the external Organisation
 escidoc.pubman.external.organisation.id=${escidoc.pubman.external.organisation.id}
