--- a/common_services/cone/pom.xml
+++ b/common_services/cone/pom.xml
@@ -121,5 +121,12 @@
 			<version>8.3-604.jdbc3</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>de.mpg.escidoc.services</groupId>
+			<artifactId>aa_logic</artifactId>
+			<version>0.1.0-SNAPSHOT</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 </project>
